scrape complete (#6)
* add csv manipulator (not tested)

* - small fixes on the Scraper class and its children
- added Test class
- added some test links

* scrape complete