@@ -19,3 +19,8 @@ tasks.test {
     useJUnitPlatform()
 }
 
+test
+        {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        }
+
